# dedoku

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
benchmark/: backtracking.py  generate_puzzles.py  make_charts.py  puzzles_500.csv  results.csv  run_benchmark.py  validate.py
dedoku/: __init__.py  cell.py  exceptions.py  grid.py  solver.py  units.py
dedoku/techniques/: __init__.py  aic.py  als.py  base.py  bug.py  chains.py  chute.py  colouring.py  fish.py  hidden.py  intersections.py  medusa.py  naked.py  rectangles.py  wings.py  wwing.py
docs/: api.rst  benchmark.rst  cli.rst  conf.py  index.rst  techniques.rst  usage.rst
sudoku_solver/: __init__.py  cell.py  grid.py  solver.py
sudoku_solver/techniques/: __init__.py  chains.py  fish.py  intersections.py  rectangles.py  wings.py  wwing.py
tests/: __init__.py  support.py  test_aic.py  test_als.py  test_api.py  test_avoidable.py  test_bug.py  test_cell.py  test_chains.py  test_chute.py  test_colouring.py  test_fish.py  test_grid.py  test_intersections.py  test_medusa.py  test_oracle.py  test_rectangles.py  test_solver.py  test_techniques.py  test_wings.py  test_wwing.py
