[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dedoku"
version = "1.0.0"
description = "A pure-Python Sudoku solver that uses only human-style logical deduction techniques (no backtracking)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "n36l3c7", email = "gervasio.samu@gmail.com" },
]
keywords = ["sudoku", "solver", "puzzle", "logic", "deduction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
dedoku = "dedoku.cli:main"

[project.urls]
Repository = "https://github.com/n36l3c7/Dedoku"
Documentation = "https://n36l3c7.github.io/Dedoku/"
Changelog = "https://github.com/n36l3c7/Dedoku/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["dedoku*"]

[tool.setuptools.package-data]
dedoku = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
